fix(eslint): ignore filename and includes package.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "esModuleInterop": true,
     "useUnknownInCatchVariables": false
   },
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts", "package.json"]
 }
